--- a/Reports/LiteratureReview/bibliography.bib
+++ b/Reports/LiteratureReview/bibliography.bib
@@ -263,3 +263,22 @@ Year = {1998},
   pages={657--668},
   year={1983}
 }
+
+@article{zalta1988basic,
+  title={Basic concepts in modal logic},
+  author={Zalta, Edward N},
+  journal={Center for the Study of Language and Information Publications},
+  pages={2},
+  year={1988}
+}
+
+@InCollection{sep-set-theory,
+	author       =	{Bagaria, Joan},
+	title        =	{Set Theory},
+	booktitle    =	{The Stanford Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{http://plato.stanford.edu/archives/fall2016/entries/set-theory/}},
+	year         =	{2016},
+	edition      =	{Fall 2016},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
